# Lumina-Spatial-RGB

./: .gitignore  README.md  bootstrap.py  configd.json  createicon.py  extract_frontend.py  main.py  package-lock.json  package.json  requirements.txt
api/: routes.py  templates.py
api/Test/: templates11.py  templates3.py
audio/: analyzer.py  discovery.py
core/: canvas.py  config.py  engine.py  sampler.py
effects/: Single_Wave.py  audio_spectrum.py  base_effect.py  color_rain.py  cyber_pulse.py  gif_player.py  plasma_flow.py  radial_pulsar (Copy).py  rainbow_wave.py  starlight_twinkle.py
hal/: base.py  openrgb_client.py  virtual_device.py
managers/: effect_manager.py  plugin_manager.py
plugins/: audio_pulsar.py
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
