[package]
name = "lumina"
version = "4.1.0"
description = "Lumina Spatial Studio"
authors = ["profxsx"]
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "lumina_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
